--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1542,6 +1542,7 @@ section {
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   z-index: 2;
+  display: none;
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -1637,6 +1638,7 @@ section {
   text-align: center;
   font-size: 15px;
   margin-top: 30px;
+  display: none;
 }
 
 #footer .footer-top .footer-newsletter form {
