--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1318,7 +1318,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #7cc576;
+  color: brown;
   float: left;
   width: 44px;
   height: 44px;
